<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Get Fit!</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createNewAccount">Create New \n Account</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_budget_meals">BudgetMealsActivity</string>
    <string name="meals">Meals</string>
    <string name="goals">Goals</string>
    <string name="program">Program</string>
    <string name="plan">Plan</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_item_list">FoodItemListActivity</string>
    <string name="title_activity_preview_food_item">PreviewFoodItemActivity</string>
    <string name="title_activity_gpm">GPMActivity</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="planGoalBudgetText">This Plan will enable you to achieve your goal by July 11, 2015</string>
    <string name="plancalorieBudgetText">Your daily calorie budget is 1452</string>
    <string name="planNoteText">NOTE: The NIH recommends a minimun daily calories of 1500 calories for men. Consult your physician prior to beginning or modifying any weight loss program.</string>

</resources>
