<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budgetMealsFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="loginSignUp.LoginFragment" >

  <Button
        android:id="@+id/login"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="63dp"
        android:layout_marginLeft="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/createNewAccount"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/login"
        android:layout_marginRight="20dp"
        android:text="@string/createNewAccount" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    

</RelativeLayout>
