<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/planContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/planComponentsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/lossPerWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Maintain current weight" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Loose 1/2 lb per week" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Loose 1 lb per week" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Loose 1 1/2 lb per week" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Loose 2 lb per week" />
        </RadioGroup>

        <TextView
            android:id="@+id/planCalorieBudgetTextView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/planGoalTextView"
            android:text="@string/plancalorieBudgetText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/planGoalTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lossPerWeek"
            android:layout_marginTop="25dp"
            android:text="@string/planGoalBudgetText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/planCalorieBudgetTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/planNoteText" />

    </RelativeLayout>

</LinearLayout>
