<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budgetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/budgetHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Sat, Apr 25"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/date"
            android:src="@drawable/ic_action_back" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/date"
            android:src="@drawable/ic_action_forward" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/budgetComponentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/budgetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Todays Calories Budget"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/budgetButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/budgetTitle"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/meals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/meals" />

            <Button
                android:id="@+id/goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/goals" />

            <Button
                android:id="@+id/program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/program" />

            <Button
                android:id="@+id/plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                android:text="@string/plan" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Logout" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/budgetButtonsContainer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/budgetTitle" >

            <ProgressBar
			        style="?android:attr/progressBarStyleHorizontal"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_centerInParent="true"
			        android:indeterminate="false"
			        android:max="100"
			        android:progress="100"
			        android:progressDrawable="@drawable/circle_progress_background" />

			<ProgressBar
			        android:id="@+id/circle_progress_bar"
			        style="?android:attr/progressBarStyleHorizontal"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_centerInParent="true"
			        android:max="100"
			        android:rotation="-90"
			        android:indeterminate="false"
			        android:progressDrawable="@drawable/circle_progress_foreground" />
            
			<TextView
			    android:id="@+id/caloriesTextViewDisplay"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerInParent="true"
			    android:text="Large Text"
			    android:textAppearance="?android:attr/textAppearanceLarge" />

			<TextView
			    android:id="@+id/descriptionTV"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/caloriesTextViewDisplay"
			    android:layout_centerHorizontal="true"
			    android:text="Small Text"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>